--- a/app/src/main/res/layout/activity_chinese_restaurants.xml
+++ b/app/src/main/res/layout/activity_chinese_restaurants.xml
@@ -5,91 +5,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChineseRestaurants"
-    android:background="@color/light_red">
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/textView2"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Chinese Restaurants"
-        android:gravity="center_horizontal"
-        android:textAlignment="center"
-        android:textSize="20dp"
-        android:textColor="@color/teal_200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </TextView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="50dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
-
-        <ImageView
-            android:id="@+id/chineseRestaurant2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/chinese_restaurant_1"></ImageView>
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Swatow Restaurant"
+            android:layout_height="69dp"
+            android:background="@color/black"
+            android:gravity="center_horizontal"
+            android:text="Chinese Restaurants"
             android:textAlignment="center"
-            android:background="@color/white"
-            android:textSize="20dp"></TextView>
-    </LinearLayout>
+            android:textColor="@color/white"
+            android:textSize="35dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="220dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
+        </TextView>
 
-        <ImageView
-            android:id="@+id/chineseRestaurant1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/chinese_restaurant_1"></ImageView>
-
-        <TextView
-            android:layout_width="match_parent"
+        <ListView
+            android:id="@+id/chineseList"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Hong Shing Restaurant"
+            android:divider="@color/black"
+            android:dividerHeight="1dp"
             android:textAlignment="center"
-            android:background="@color/white"
-            android:textSize="20dp"></TextView>
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@id/textView2"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.499">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="400dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
+        </ListView>
 
-        <ImageView
-            android:id="@+id/chineseRestaurant3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/chinese_restaurant_1"></ImageView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Lee Chen Asian Bistro"
-            android:textAlignment="center"
-            android:background="@color/white"
-            android:textSize="20dp"></TextView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
