--- a/app/src/main/res/layout/activity_cuisine_list.xml
+++ b/app/src/main/res/layout/activity_cuisine_list.xml
@@ -12,15 +12,21 @@
         android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:background="#616161"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="20dp">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="410dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:text="Example"
+            android:textColor="@color/white"
+            android:padding="15dp"
             android:layout_gravity="center_horizontal"
-            android:textSize="20dp"></TextView>
+            android:textSize="30dp"
+            ></TextView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
