--- a/app/src/main/res/layout/activity_greek_restaurants.xml
+++ b/app/src/main/res/layout/activity_greek_restaurants.xml
@@ -5,91 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GreekRestaurants"
-    android:background="@color/light_blue">
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/textView2"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Greek Restaurants"
-        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="69dp"
+            android:background="@color/black"
+            android:gravity="center_horizontal"
+            android:text="Greek Restaurants"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="35dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+        </TextView>
+
+    <ListView
+        android:id="@+id/greekList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:divider="@color/black"
+        android:dividerHeight="1dp"
         android:textAlignment="center"
-        android:textColor="@color/purple_200"
-        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@id/textView2"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499">
 
-    </TextView>
+    </ListView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="50dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
-
-        <ImageView
-            android:id="@+id/greekRestaurant2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/greek_restaurant_1"></ImageView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Volos Greek Cuisine"
-            android:background="@color/white"
-            android:textAlignment="center"
-            android:textSize="20dp"></TextView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="220dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
-
-        <ImageView
-            android:id="@+id/greekRestaurant1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/greek_restaurant_1"></ImageView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Mezes"
-            android:textAlignment="center"
-            android:background="@color/white"
-            android:textSize="20dp"></TextView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="400dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2">
-
-        <ImageView
-            android:id="@+id/greekRestaurant3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/greek_restaurant_1"></ImageView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Karbouzi"
-            android:background="@color/white"
-            android:textAlignment="center"
-            android:textSize="20dp"></TextView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
