--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,30 +7,75 @@
     tools:context=".MainActivity">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black"
+            android:orientation="horizontal"
+            android:textAlignment="center">
+
+            <TextView
+                android:layout_width="336dp"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:padding="20dp"
+                android:paddingTop="20sp"
+                android:paddingBottom="20dp"
+                android:text="Restaurant Finder"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="25dp"
+                android:textStyle="bold"></TextView>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="69dp"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:background="@color/black"
+                android:maxWidth="20dp"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/magnifying_glass" />
+
+
+        </LinearLayout>
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cuisine Selection"
-            android:textStyle="bold"
-            android:textAlignment="center"
+            android:layout_marginBottom="40dp"
+            android:padding="20dp"
+
             android:paddingTop="20sp"
-            android:paddingBottom="20dp">
-        </TextView>
+            android:paddingBottom="40dp"
+            android:text="Please Select a Cuisine Type:"
+            android:textAlignment="center"
+            android:textColor="#282828"
+            android:textSize="17dp"
+            android:textStyle="italic"></TextView>
 
         <ListView
             android:id="@+id/cuisineList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:dividerHeight="1dp"
-            android:divider="@color/black">
+            android:divider="@color/white"
+            android:dividerHeight="10dp"
+            android:textAlignment="center">
 
         </ListView>
 
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
